First Version Finished

--- a/Two_Column_onepage_cv/my_cv/cv_3.tex
+++ b/Two_Column_onepage_cv/my_cv/cv_3.tex
@@ -78,7 +78,9 @@
 %----------------------------------------------------------------------------------------
 
 \par{\centering{\sffamily\Huge Tzu-Heng Lin (Brian)}\\ % Your name
-{\color{headings}\fontspec[Variant = 2]{Zapfino} Curriculum {Vit\fontspec[Variant = 3]{Zapfino}\ae}\\[15pt]\par} % Curriculum vitae text in the Zapfino font
+{\color{headings}\fontspec[Variant = 2]{Zapfino} Data Science Engineer, Maker}\\[5pt]
+
+% {Vit\fontspec[Variant = 3]{Zapfino}\ae}\\[15pt]\par} % Curriculum vitae text in the Zapfino font
 	
 %----------------------------------------------------------------------------------------
 
@@ -97,7 +99,7 @@
 
 {\raggedleft\textsc{Current, from Mar 2016}\par}
 
-{\raggedright\large Research Assistant at \\ \textsc{Future Comms \& Int. Lab, Tsinghua University}
+{\raggedright\large \textbf{Research Assistant} \\ \textsc{Future Comms. \& Int. Lab, Tsinghua University}
 \\
 \textit{Data Mining with Big Data}\\[5pt]}
 
@@ -109,7 +111,7 @@
 
 {\raggedleft\textsc{July 2016 -- Aug 2016}\par} 
 
-{\raggedright\large Research Intern at \\ \textsc{Academia Sinica}, Taiwan\\
+{\raggedright\large \textbf{Research Intern} \\ \textsc{Academia Sinica}, Taiwan\\
 \textit{Big Data Analytics, Machine Learning}\\[5pt]}
 
 \normalsize{Research in Facebook Fan Pages in Taiwan, found patterns in posts and real categories of pages, skills including Statistics, Machine Learning, Text Mining, Time Series Analysis.}\\
@@ -122,18 +124,18 @@
 
 {\raggedleft\textsc{Current, from Sep 2016}\par}
 
-{\raggedright\large Vice President at \\ \textsc{THU Maker Space}
+{\raggedright\large \textbf{Vice President} \\ \textsc{Thu Maker Space}
 \\
 \textit{Lead the Public Relation Dept. \& Standing Dept.}\\[5pt]}
 
-\normalsize{Provided analysis of spreads, .}\\
+\normalsize{Two Years Experience in Maker Field, a True Lover, Believer.\\Selected Maker Representative of Tsinghua University}\\
 
 
 %----------------------------------------------------------------------------------------
-%	ACHIEVEMENT & AWARDS
+%	AWARDS & HONORS
 %----------------------------------------------------------------------------------------
 
-\section{Achievement \& Awards} 
+\section{Awards \& Honors} 
 
 \begin{tabular}{rl}
 %------------------------------------------------
@@ -193,9 +195,10 @@
 \raisebox{-3pt}{\Mobilefone} & +86 131-2192-9165 in \textsc{China} \\ % Phone number
 \raisebox{-3pt}{\Mobilefone} & +886 911-482-136 in \textsc{Taiwan} \\ % Phone number
 \raisebox{-1pt}{\Letter} & \href{mailto:lzhbrian@gmail.com}{lzhbrian@gmail.com} \\ % Email address
-\faLinkedin & \href{http://www.linkedin.com/in/lzhbrian}{linkedin/lzhbrian} \\ % Linkedin
-\faGithub & \href{http://www.github.com/lzhbrian}{github/lzhbrian} \\ % Linkedin
-\faFacebook & \href{http://www.facebook.com/lzhbrian}{facebook/lzhbrian} \\ % Linkedin
+\faLinkedin & {linkedin: \href{http://www.linkedin.com/in/lzhbrian}{lzhbrian}} \\ % Linkedin
+\faGithub & {github: \href{http://www.github.com/lzhbrian}{lzhbrian}} \\ % Github
+\faFacebook & {facebook: \href{http://www.facebook.com/lzhbrian}{lzhbrian}} \\ % Facebook
+\faWechat & {Wechat: lzhbrian} \\ % Wechat
 \end{tabular}
 }
 }\\[10pt]
@@ -225,7 +228,7 @@
 & \small Double Major \\
 & \textsc{Business Management 3.85/4.0} \\ 
 & \textit{Tsinghua University}\\
-&\\
+
 
 %----------------------------------------------------------------------------------------
 
@@ -239,7 +242,7 @@
 
 \begin{tabular}{rl}
 Expert
-& Data Mining \\
+& Data Mining, Big Data Analytics \\
 & \textsc{Python}, \textsc{Hadoop}, \textsc{C/C++}, \textsc{Matab}, \textsc{Git} \\
 & \\
 Intermediate
@@ -247,7 +250,6 @@ Intermediate
 & Machine Learning, \textsc{Theano}, \textsc{DL4J} \\
 & \textsc{Java}, \textsc{Swift}, \LaTeX, \textsc{SQL} \\
 & Linux, OSX, Windows \\
-\\
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
@@ -259,11 +261,10 @@ Intermediate
 \begin{tabular}{rl}
 \textsc{Mandarin}
 & Native Speaker \\
-& \\
 \textsc{English}
 & Full Professional Proficiency \\
-& \textsc{TOEIC}: 910 \\
-& \textsc{TOEFL}: 102 \\
+& \textsc{Toeic}: 910 \\
+& \textsc{Toefl}: 102 \\
 \end{tabular}\\[10pt]
 
 %----------------------------------------------------------------------------------------
@@ -280,7 +281,30 @@ Intermediate
 
 %------------------------------------------------
 2016	 & \textbf{Video}\\
-& \textit{xxx Conference}\\ \\
+& \textit{xxx Conference}\\
+& \\
+\end{tabular}
+
+%----------------------------------------------------------------------------------------
+%	Media
+%----------------------------------------------------------------------------------------
+
+\section{Media} 
+
+\begin{tabular}{rl}
+
+%------------------------------------------------
+2015	 & \textbf{\href{http://bjrb.bjd.com.cn/html/2015-12/07/content_335081.htm}{Liu-Yi-Xia, My Exclusive Interview}}\\
+& \textit{Beijing Daily}\\
+
+%------------------------------------------------
+2015	 & \textbf{\href{http://www.todayfocus.cn/p/4149.html}{China-US Young Maker Talk}}\\
+& \textit{Today Focus}\\
+
+%------------------------------------------------
+2014	 & \textbf{\href{http://www.appledaily.com.tw/realtimenews/article/new/20140213/343710/}{Two years in Taiwan, achieve 73 grade.}}\\
+& \textit{Apple Daily}\\ \\
+
 
 \end{tabular}
 
