--- a/Two_Column_onepage_cv/my_cv/resume.tex
+++ b/Two_Column_onepage_cv/my_cv/resume.tex
@@ -78,7 +78,7 @@
 %----------------------------------------------------------------------------------------
 
 \par{\centering{\sffamily\Huge Tzu-Heng Lin (Brian)}\\ % Your name
-{\color{headings}\fontspec[Variant = 2]{Zapfino} Data Science Engineer, Maker}\\[5pt]
+{\color{headings}\fontspec[Variant = 2]{Zapfino} Maker, Hacker}\\[5pt]
 
 % {Vit\fontspec[Variant = 3]{Zapfino}\ae}\\[15pt]\par} % Curriculum vitae text in the Zapfino font
 	
@@ -101,9 +101,9 @@
 
 {\raggedright\large \textbf{Research Assistant} \\ \textsc{Future Comms. \& Int. Lab, Tsinghua University}
 \\
-\textit{Data Mining with Big Data}\\[5pt]}
+\textit{Big Data Mining, Machine Learning}\\[5pt]}
 
-\normalsize{Research in Online Shopping Behaviors and Online Video Consumption Behaviors of Users, using Hadoop and Machine Learning Skills.}\\
+\normalsize{Research in Online Shopping Behaviors \& Online Video Consumption Behaviors of Users.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 2
@@ -112,7 +112,7 @@
 {\raggedleft\textsc{July 2016 -- Aug 2016}\par} 
 
 {\raggedright\large \textbf{Research Intern} \\ \textsc{Academia Sinica}, Taiwan\\
-\textit{Big Data Analytics, Machine Learning}\\[5pt]}
+\textit{Big Data Mining, Machine Learning}\\[5pt]}
 
 \normalsize{Research in Facebook Fan Pages in Taiwan, found patterns in posts and real categories of pages, skills including Statistics, Machine Learning, Text Mining, Time Series Analysis.}\\
 
@@ -143,15 +143,15 @@
 & \textit{Tsinghua University}\\ \\
 
 %------------------------------------------------
-2015	 & \textbf{3\textsuperscript{rd} Prize, China-US Maker Competition Final}\\
-& \textit{Minister of Education, PRC; Intel Inc.}\\ \\
-
-%------------------------------------------------
-2015,16	 & \textbf{1\textsuperscript{st} Place Consecutively, Tsinghua Make-a-thon}\\
+2015,16	 & \textbf{Consecutive 1\textsuperscript{st}} Place, \textbf{Tsinghua Make-a-thon}\\
 & \textit{Tsinghua University}\\ \\
 
 %------------------------------------------------
-2015	 & \textbf{3\textsuperscript{rd} Prize, Tsinghua Teamstyle Program Contest}\\
+2015	 & \textbf{3\textsuperscript{rd}} Prize, \textbf{China-US Maker Competition Final}\\
+& \textit{Minister of Education, PRC; Intel Inc.}\\ \\
+
+%------------------------------------------------
+2015	 & \textbf{3\textsuperscript{rd}} Prize, \textbf{Tsinghua Teamstyle Program Contest}\\
 & \textit{Tsinghua University}\\ \\
 
 \end{tabular}
@@ -165,16 +165,16 @@
 \begin{tabular}{rl}
 
 %------------------------------------------------
-2015	 & \textbf{1\textsuperscript{st} Prize, Scholarship for Taiwanese Student}\\
+2015 & \textbf{1\textsuperscript{st} Prize, Scholarship for Taiwanese Student}\\
 & \textit{Minister of Education, PRC}\\ \\
 
 %------------------------------------------------
-2015	 & \textbf{Outstanding Scholarship for Science and Technology}\\
-& \textit{Tsinghua University}\\ \\
-
-%------------------------------------------------
-2015	 & \textbf{Outstading Scholarship for Social Work}\\
-& \textit{Tsinghua University}\\ \\
+2016 & \textbf{Outstanding Scholarship} for \\
+& \textbf{Comprehensive Performance}, Tsinghua University\\
+& including scholarships for:\\
+& \textit{            Science and Technology}, \\
+& \textit{            Social Work},\\
+& \textit{            Arts and Cultural Excellence}
 
 \end{tabular}
 
@@ -191,7 +191,7 @@
 
 \colorbox{shade}{\textcolor{text1}{
 \begin{tabular}{c|p{7cm}}
-\raisebox{-4pt}{\textifsymbol{18}} & Born: \textit{TWN}, Grown: \textit{SHG}, Now: \textit{BJ} \\ % Address
+\raisebox{-4pt}{\textifsymbol{18}} & Born: \textit{TWN}, Grown: \textit{SHG},\textit{TWN}, Now: \textit{BJ} \\ % Address
 \raisebox{-3pt}{\Mobilefone} & +86 131-2192-9165 in \textsc{China} \\ % Phone number
 \raisebox{-3pt}{\Mobilefone} & +886 911-482-136 in \textsc{Taiwan} \\ % Phone number
 \raisebox{-1pt}{\Letter} & \href{mailto:lzhbrian@gmail.com}{lzhbrian@gmail.com} \\ % Email address
@@ -240,16 +240,23 @@
 
 \section{Professional Skills} 
 
+
 \begin{tabular}{rl}
-Expert
+Knowledge
 & Data Mining, Big Data Analytics \\
-& \textsc{Python}, \textsc{Hadoop}, \textsc{C/C++}, \textsc{Matab}, \textsc{Git} \\
+& Machine Learning, Data Visualization\\
 & \\
-Intermediate
-& Data Visualization, \textsc{Tableau} \\
-& Machine Learning, \textsc{Theano}, \textsc{DL4J} \\
-& \textsc{Java}, \textsc{Swift}, \LaTeX, \textsc{SQL} \\
-& Linux, OSX, Windows \\
+
+Skills
+& \textsc{Python}, \textsc{R}, \textsc{Matab}, \textsc{Git} \\
+& \textsc{C/C++}, \textsc{Java}, \LaTeX, \textsc{SQL},  \textsc{Swift} \\
+&\\
+
+Tools
+& \textsc{Hadoop}, \textsc{Theano}, \textsc{DL4J}, \textsc{Weka} \\ 
+& \textsc{Tableau}, Linux, OSX, Windows \\
+&\\
+
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
@@ -276,13 +283,10 @@ Intermediate
 \begin{tabular}{rl}
 
 %------------------------------------------------
-2016	 & \textbf{Profiling Users by Online Shopping Behaviors}\\
-& \textit{xxx Conference}\\ \\
+2016	 & Expected to have some publications \\
+& in Data Mining \\
 
-%------------------------------------------------
-2016	 & \textbf{Video}\\
-& \textit{xxx Conference}\\
-& \\
+&\\
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
