--- a/twopage/twopage.tex
+++ b/twopage/twopage.tex
@@ -142,7 +142,7 @@
   \resumeSubHeadingListStart
     \resumeSubheadingedu
       {Tsinghua University (Dual Degree)}{Beijing, China}
-      {Bachelor of Science in Electronic Information}{GPA: 84/100}{Aug. 2014 -- June. 2018}
+      {Bachelor of Science in Electronic Information}{GPA: 84/100}{Aug 2014 - June 2018}
       {Bachelor of Business Administration in Management (2nd Degree)}{GPA: 87/100}
   \resumeSubHeadingListEnd
 
@@ -167,25 +167,25 @@
       {\textbf{Research Assistant} in Future Communication \& Internet Lab}{Apr 2016 - Present (9 mo)}
       \resumeItemListStart
 
-        \resumeItem{Online Video Consumption Behaviors Analysis}{(Finished, Paper in submission)}\\
+        \resumeItem{Online Video Consumption Behaviors Analysis}{(Finished, Paper submitted)}\\
         \vspace{1mm}
           {- Mining a \underline{TB-scale, 2-Month, 10-Million-User} dataset from an ISP including viewing records of most main Video Content Providers, including Youku, IQIYI, Sohu, LeTV, Tencent, KanKan, etc.}\\
           {- Studied the migratory behaviors of users, found potential migratory reasons.}\\
           {- Responsible for all of the data processing and analysis work.} \\
-          {~~~~- Written \underline{hundreds of Hadoop MapReduce programs} in Java and also use Python to process the data.}\\
-          {~~~~- Analyze and Visualize the data using Matlab and R.}\\
+          {~~~~- Written \underline{hundreds of Hadoop MapReduce programs} in Java and also used Python to process the data.}\\
+          {~~~~- Analyzed and Visualized the data using Matlab and R.}\\
 
-        \resumeItem{Online Shopping Behaviors Analysis}{(Finished, Paper in submission)}\\
+        \resumeItem{Online Shopping Behaviors Analysis}{(Finished, Paper submitted)}\\
         \vspace{1mm}
-          {- Mining a \underline{30-Day, Million-User-scale} dataset of JD viewing log.}\\
+          {- Mining a \underline{30-Day, Million-User-scale} dataset of JD online shopping viewing log.}\\
           {- Discovered unique user behaviors when browsing.} \\
-          {- Responsible for most of the data processing and analysis work. (Same as the above Project)}\\
+          {- Responsible for most of the data processing and analysis work. (Same as the previous Project)}\\
           
       \resumeItemListEnd
   
     \resumeSubheading
       {Academia Sinica \color{blue}\href{http://mmnet.iis.sinica.edu.tw}{[link]}}{Taipei, Taiwan}
-      {\textbf{Summer Research Internship} in Data Insights Research Lab}{July 2016 - Aug 2016 (2 mo)}
+      {\textbf{Summer Research Internship} in Data Insights Research Lab}{Jul 2016 - Aug 2016 (2 mo)}
       \resumeItemListStart
         \resumeItem{Data Mining in Facebook Fan Pages: }\\
         \vspace{1mm}
@@ -197,14 +197,18 @@
       \resumeItemListEnd
 
     \resumeSubheading
-      {Student Association of Science and Technology, EE, THU \color{blue}\href{http://www.eesast.com}{[link]}}{Beijing, China}
-      {\textbf{Leader of Web Development}, Tsinghua Teamstyle Programming Competition}{Jul 2015 - May 2016 (10 mo)}
+      {Student Association of Science and Technology, EE, THU
+      \color{blue}\href{http://www.eesast.com}{[link]}
+      \color{blue}\href{https://github.com/eesast}{[github]}
+      }
+      {Beijing, China}
+      {\textbf{Leader of Web Development}, Tsinghua Teamstyle Programming Competition}{Jul 2015 - May 2016 (9 mo)}
       \resumeItemListStart
-        \resumeItem{Web development: \color{blue}\href{http://github.com/eesast/ts17web}{\textbf{[github repo]}}}\\
+        \resumeItem{Web Development: \color{blue}\href{http://github.com/eesast/ts17web}{\textbf{[github repo]}}}\\
         \vspace{1mm}
-          {- Led the web development team of \emph{Tsinghua Teamstyle Programming Competition 2016}.}\\
-          {~~~~- Built the backend using \emph{Yii framework} (PHP, MVC).}\\
-          {~~~~- Designed and Built most data structures using \emph{MySQL}.}\\
+          {- Led the Web Development Team of \emph{Tsinghua Teamstyle Programming Competition 2016}.}\\
+          {~~~~- Built the backend using \href{http://www.yiiframework.com}{\emph{Yii framework} (PHP, MVC)}.}\\
+          {~~~~- Designed and Built most data structures using \emph{MySQL}, \emph{phpMyAdmin}.}\\
           {~~~~- Implemented most of the features, including \emph{Register}, \emph{Login}, \emph{Online Battle}, \emph{Forum} and \emph{Code submit}, etc.}\\
           {- Co-work, version control using \emph{Git}. }
       \resumeItemListEnd
@@ -217,7 +221,7 @@
         \vspace{1mm}
           {- THU MakerSpace is one of the greatest Maker Spaces in China.} \\
           {~~~~- We have received letters from Premier Keqiang Li. \color{blue}\href{http://www.moe.edu.cn/publicfiles/business/htmlfiles/moe/moe_838/201505/186765.html}{\textbf{[press]}}}\\
-          {- Led the work of \emph{Project Dept}, the \emph{Public Relation Dept.} \& the \emph{Standing Dept.} }\\
+          {- Led the work of the \underline{\emph{Project Dept}}, the \underline{\emph{Public Relation Dept.}} \& the \underline{\emph{Standing Dept.}} }\\
           {~~~~- Responsible for the Maker Events and Competitions held weekly}\\
           {~~~~- Such as \emph{Arduino Tutorial}, \emph{Processing}, \emph{3D modeling}, \emph{Design thinking} and \emph{Brain Storming} Workshops, etc.} \\
           {- Directed several projects, and also Winners of many Make-a-thons.}\\
@@ -249,11 +253,11 @@
             {- \emph{China-US Maker Competition} is the \underline{biggest Make-a-thon in China \& US}.
             \color{blue}\href{https://www.chinaus-maker.org}{\textbf{[link]}}
             }\\
-            {- As \underline{\textbf{\emph{Team Leader}}} \& \underline{\textbf{\emph{Software Eng.}}}, won the \underline{5th place out of 300 teams} all over the world in 2015.} \\
+            {- Role: \underline{\textbf{\emph{Team Leader}}} \& \underline{\textbf{\emph{Software Eng.}}}, won the \underline{5th place out of 300 teams} all over the world in 2015.} \\
             {~~~- Led \& organized the team. Started the project.} \\
             {~~~- \emph{iOS app development} using \emph{Swift} with \emph{Xcode}.} \\
               {~~~~~~- Built features include \emph{TableView present}, \emph{SideMenu}, \emph{Customized Tab Button}, \emph{Customized Segue Effect}.} \\
-              {~~~~~~- \emph{QR Code} support which could connect mobile devices with the hardware.} \\
+              {~~~~~~- Implemented \emph{QR Code} support which could connect mobile devices with the hardware.} \\
             {~~~- \emph{Design}, \emph{3D modeling}, \emph{3D printing} and \emph{Laser cutting} to build to whole prototype.}
         \resumeItemListEnd
 
@@ -266,7 +270,7 @@
           \resumeItem{\emph{Tsinghua Maker Challenge 2016}: }{\textbf{Championship}} \\
           \vspace{1mm}
             {- \emph{Tsinghua Maker Challenge} is the \underline{biggest Make-a-thon held in Tsinghua}.}\\
-            {- As \underline{\textbf{\emph{Team Leader}}} \& \underline{\textbf{\emph{Software Eng.}}}, won the \underline{Championship} in 2016.} \\
+            {- Role: \underline{\textbf{\emph{Team Leader}}} \& \underline{\textbf{\emph{Software Eng.}}}, won the \underline{Championship} in 2016.} \\
             {~~~- Led \& organized the team. Started the project.} \\
             {~~~- \emph{iOS app development} using \emph{Swift} with \emph{Xcode}.} \\
               {~~~~~~- Built features include \emph{TableView present}, \emph{Customized Tab Button}, \emph{Customized Segue Effect}.} \\
@@ -278,10 +282,10 @@
         \resumeItemListStart
           \resumeItem{\emph{Tsinghua Teamstyle Programming Contest 2015}: }{\textbf{3rd Prize}} \\
           \vspace{1mm}
-            {- \emph{Tsinghua Teamstyle Programming Contest} is \underline{one of the biggest programming competitions writing AI for games}.} \\
-            {- As \underline{\textbf{\emph{Team Leader}}}, won the \underline{3rd Prize} in 2015.} \\
+            {- \emph{Tsinghua Teamstyle Programming Contest} is \underline{one of the biggest programming competitions} in Tsinghua.} \\
+            {- Role: \underline{\textbf{\emph{Team Leader}}}, won the \underline{3rd Prize} in 2015.} \\
             {~~~- Led the team.} \\
-            {~~~- Developed strategies and implemented using C++}
+            {~~~- Developed strategies and implemented using C++. Wrote AI to run a MOBA-style game.}
         \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -347,9 +351,9 @@
 %--------PUBLICATIONS------------
 \sectionwithbox{Publications}
   \resumeSubHeadingListStart
-	\resumeSubheadingPublication{H.Yan, \textbf{T.Lin}, G.Wang, Y.Li, H.Zheng, D.Jin, and B.Zhao, On Migratory Behavior in Video Consumption, \emph{Paper Submitted}.}
+	\resumeSubheadingPublication{H.Yan, \textbf{T.Lin}, G.Wang, Y.Li, H.Zheng, D.Jin, and B.Zhao, On Migratory Behavior in Video Consumption, \emph{Conference Paper Submitted}.}
 	\resumeSubheadingPublication{H.Yan, \textbf{T.Lin}, C.Gao, Y.Li, and D.Jin, On the Understanding of User Behaviors Over Multiple Video Content Providers, \emph{Journal Paper Submitted}.}
-	\resumeSubheadingPublication{H.Yan, Z.Wang, \textbf{T.Lin}, Y.Li, Y.Wang, and D.Jin, Profiling Users by Online Shopping Behaviors, \emph{Poster Paper Submitted}.}
+	\resumeSubheadingPublication{H.Yan, Z.Wang, \textbf{T.Lin}, Y.Li, Y.Wang, and D.Jin, Profiling Users by Online Shopping Behaviors, \emph{Conference Poster Paper Submitted}.}
   \resumeSubHeadingListEnd
   
   
