--- a/CN_2page/CN_twopage.tex
+++ b/CN_2page/CN_twopage.tex
@@ -309,11 +309,12 @@
     \resumeSubheadinghonor
       {清华创客代表}{, 清华大学 \color{blue}\href{http://lzhbrian.me/posts_figure/maker.jpeg}{~\textbf{[照片]}}}
       {因在创客领域所获得的成就以及贡献}
-    
+    \resumeSubheadinghonor
+      {启创班成员}{, 清华大学}
+      {由清华大学校团委所主持培养创新、创业人才计划，\underline{全校仅录取~30~余人}}
      \resumeSubheadinghonor
       {教育部港澳台学生~一等奖学金}{, 中华人民共和国~教育部}
       {\underline{\textbf{Top 3/50}}, 颁发给在大陆学习的优秀台湾学生}
-
      \resumeSubheadinghonortwo
       {清华之友~-~郑格如奖学金}{, 清华大学}
       {\underline{\textbf{Top 35/260}}, 获得~\textbf{多个单项奖学金}~后所参评的\textbf{综合奖学金}}
