--- a/ENG_2page/twopage.tex
+++ b/ENG_2page/twopage.tex
@@ -305,14 +305,19 @@
     \resumeSubheadinghonor
       {Maker Representative}{, Tsinghua Universtiy \color{blue}\href{http://lzhbrian.me/posts_figure/maker.jpeg}{\textbf{[picture]}}}
       {Honored this title by the contributions \& achievements in the maker field.}
-    
+      
+    \resumeSubheadinghonortwo
+      {Member of the \emph{Qi Chuang} Student Entrepreneurial Talent Training Program}{, Tsinghua Universtiy}
+      {An official program of Tsinghua aimed to cultivate talents in the field of Innovation and Entrepreneurship.}
+      {\underline{Only 30 people} are selected to this program.}
+        
      \resumeSubheadinghonor
       {1st Prize Scholarship for Taiwanese Student}{, Minister of Education, P.R.C.}
       {\underline{Top 3/50}, Awarded 1st prize scholarship honor for Taiwanese students studying in Mainland China.}
 
      \resumeSubheadinghonortwo
       {Zheng Geru Scholarship for Comprehensive Performance}{, Tsinghua University}
-      {\underline{Top 35/260}, for students who have achieved multiple individual scholarships.}
+      {\underline{Top 35/260}, for students who have \underline{achieved multiple individual scholarships}.}
       {Including excellence scholarships for: \underline{\small\textbf{Science and Technology}}, \underline{\small\textbf{Social Work}}, \underline{\small\textbf{Arts and Cultural}}, respectively.}
     
   \resumeSubHeadingListEnd
